refactor: 터지는 테스트 수정